# TI-Calc-Video-Generator

./: .gitignore  0104.key  Cargo.toml  LICENSE  README.md  audVid.z80  calcVid.z80  compile.bat  compile.sh  copyapp.sh
src/: args.rs  frame.rs  macros.rs  main.rs
src/args/: args.rs
src/compress/: accel.rs  cycle_limit.rs  diff.rs  graph_solve.rs  instr.rs  lzss_alt.rs  lzss_st.rs  mod.rs  nib_diff.rs  none.rs  rle_lzss.rs  rlelzss.rs
src/compress/old/: diff.rs
src/convert/: dither.rs
src/frame/: aud.rs  frame.rs  img.rs  mod.rs
src/helper/: funcs.rs  macros.rs  mod.rs
src/load/: audiostream.rs  dither.rs  loadimg.rs  mod.rs
src/video/: app.rs  dither.rs  extract.rs  img.rs  mod.rs  old_video.rs  video.rs
z80/: audVid.z80
