[package]
name = "tiVidConvert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
args = "2.2.0"
getopts = "0.2"
image = "0.24.3"
num = "0.4.0"

[target.'cfg(windows)'.dependencies]
crossterm = "0.25.0"
